fix: add gap to navbar items

--- a/src/app/components/header/header.component.sass
+++ b/src/app/components/header/header.component.sass
@@ -6,6 +6,7 @@ div
   display: flex
   justify-content: space-between
   flex-direction: row
+  gap: 10px
 
 div.navbar
   display: flex
